syntax = "proto3";

message ClientInitMessage {
    required uint32 N = 1;
    required uint32 M = 2;
    required uint32 delta = 3;
    required uint32 X = 4;

    message ServerData {
        required string serverIp = 1;
        required uint32 serverPort = 2;
    }

    required ServerData server = 5;
}