syntax = "proto3";

package proto;

message ClientResponseStatMessage {
    uint32 averageClientTime = 1;
}